# auth-platform

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_websockets.html
alembic/: env.py
alembic/versions/: 1daf0440ed51_create_users_table.py
app/: main.py  tasks.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  notifications.py
app/core/: cache.py  celery_app.py  config.py  dependencies.py  limiter.py  security.py
app/db/: base.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
auth_platform.egg-info/: SOURCES.txt  requires.txt
