[project]
name = "auth-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "redis==5.2.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "pydantic-settings==2.7.0",
    "pydantic[email]==2.10.4",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]